@@ -1,6 +1,9 @@
 1.0 "Asieoniezi"
 
 0.131 "FIXME"
+ 440545 saving a group's headers could be faster (Charles / Sysprof)
+ 440470 fix 0.130 bug that made deleting articles very slow (Walt)
+ 440194 fix 0.127 memory leak (Valgrind)
  426377 workaround for GMime bug that won't show multipart images (Mike)
 
 0.130 "Hyperbolicsyllabicsesquedalymistic"
